crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@168.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '1.e3.e4'::jsonpath;"
---
SelectStmt@0..27
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..26
    TypeCast@7..26
      AConst@7..16
        Sconst@7..16 "'1.e3.e4'"
      Typecast@16..18 "::"
      TypeName@18..26
        Ident@18..26 "jsonpath"
  Ascii59@26..27 ";"

